Social alignment fixes

--- a/css/image.css
+++ b/css/image.css
@@ -47,6 +47,7 @@
   width: 100%;
   height: 40vh;
   object-fit: cover;
+  object-position: 33%;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
 }
