--- a/css/social.css
+++ b/css/social.css
@@ -15,7 +15,7 @@
 
 .Social-link {
   display: block;
-  padding: 12px 10px 8px;
+  padding: 10px 10px 4px;
   color: var(--color-font-primary);
 }
 
@@ -35,7 +35,7 @@
 
 @media (min-width: 480px) {
   .Social-link {
-    padding-left: 20px;
+    padding: 12px 10px 10px 20px;
   }
 
   .Social-label {
